[gd_scene load_steps=6 format=3 uid="uid://gjd01g4hdxhj"]

[ext_resource type="Script" path="res://Screen.gd" id="1_o8gjo"]
[ext_resource type="Script" path="res://LineEdit.gd" id="2_euhn2"]
[ext_resource type="Script" path="res://MultiplayerSpawner.gd" id="3_hrbut"]
[ext_resource type="PackedScene" uid="uid://27m5y3i3kvia" path="res://player2.tscn" id="4_emw4a"]

[sub_resource type="FontFile" id="FontFile_ssb5r"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[node name="Screen" type="Node2D"]
script = ExtResource("1_o8gjo")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 353.0
offset_top = 266.0
offset_right = 812.0
offset_bottom = 435.0
theme_override_fonts/font = SubResource("FontFile_ssb5r")
theme_override_font_sizes/font_size = 32
script = ExtResource("2_euhn2")

[node name="Word_Count" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Last_Character" type="Label" parent="."]
offset_left = 1105.0
offset_top = 3.0
offset_right = 1145.0
offset_bottom = 26.0

[node name="Generate_List" type="Button" parent="."]
offset_left = 510.0
offset_top = 55.0
offset_right = 669.0
offset_bottom = 150.0
text = "Add Words"

[node name="Word_Box" type="VBoxContainer" parent="."]
offset_left = 1006.0
offset_right = 1152.0
offset_bottom = 409.0

[node name="Submit" type="Button" parent="."]
offset_left = 517.0
offset_top = 170.0
offset_right = 663.0
offset_bottom = 237.0
text = "Submit"

[node name="Sentence_Box" type="VBoxContainer" parent="."]
offset_left = 199.0
offset_top = 473.0
offset_right = 969.0
offset_bottom = 543.0

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player2.tscn")
spawn_path = NodePath(".")
script = ExtResource("3_hrbut")
player_scene = ExtResource("4_emw4a")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]

[node name="Printout" type="Button" parent="."]
offset_left = 703.0
offset_top = 139.0
offset_right = 810.0
offset_bottom = 170.0
scale = Vector2(2.05563, 2.80084)
text = "sdsdaadsasd"

[node name="Share_Data" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="text_changed" from="LineEdit" to="LineEdit" method="_on_text_changed"]
[connection signal="pressed" from="Generate_List" to="." method="_on_generate_list_pressed"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Printout" to="." method="_on_printout_pressed"]
[connection signal="pressed" from="Share_Data" to="." method="_on_share_data_pressed"]
